revisado M1 e M2 - menu M1 aula 1 e 2

--- a/Layout/Aula/2de1_pt-br.html
+++ b/Layout/Aula/2de1_pt-br.html
@@ -424,9 +424,8 @@
 						biomassa lignocelulósica, pode afetar negativamente o meio ambiente. O infográfico a seguir
 						representa isso.
 					</p>
-					<div class="col-lg-6 py-4 mx-auto"><a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_1.png"
-							data-caption="">mudar imagem<img src="../Aula/img/mod2/aula_1_1.png"
-								class="img-fluid rounded" alt="">
+					<div class="col-lg-6 py-4 mx-auto"><a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_2.png"
+							data-caption=""><img src="../Aula/img/mod2/aula_1_2.png" class="img-fluid rounded" alt="">
 						</a></div>
 					<p>
 						Portanto, é crucial desenvolver técnicas eficazes de gestão de resíduos agrícolas para mitigar
@@ -466,8 +465,8 @@
 						abaixo:
 					</p>
 
-					<div class="col-lg-6 py-4 mx-auto"><a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_2.png"
-							data-caption=""><img src="../Aula/img/mod2/aula_1_2.png" class="img-fluid rounded" alt="">
+					<div class="col-lg-6 py-4 mx-auto"><a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_3.png"
+							data-caption=""><img src="../Aula/img/mod2/aula_1_3.png" class="img-fluid rounded" alt="">
 						</a></div>
 
 					<p>
@@ -607,8 +606,8 @@
 					</p>
 
 					<div class="col-lg-6 mx-auto bg-light rounded">
-						<a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_3.png" data-caption="">
-							<img src="../Aula/img/mod2/aula_1_3.png" class="img-fluid rounded" alt="">
+						<a data-fancybox="zoom" data-src="../Aula/img/mod2/aula_1_4.png" data-caption="">
+							<img src="../Aula/img/mod2/aula_1_4.png" class="img-fluid rounded" alt="">
 						</a>
 					</div>
 
@@ -852,7 +851,7 @@
 								<td>Requer instrumento baseado em ultrassom e pessoal treinado</td>
 							</tr>
 							<tr>
-								<th scope="rowgroup" rowspan="4">Químico</th>
+								<th scope="rowgroup" rowspan="5">Químico</th>
 								<td>Ácido</td>
 								<td>Ácidos fortes e fracos podem ser usados</td>
 								<td>Econômico</td>
@@ -884,6 +883,49 @@
 								<td>Alta eficiência, bom rendimento</td>
 								<td>Caro, requer recuperação de solventes</td>
 							</tr>
+							<tr>
+								<th scope="rowgroup" rowspan="5">Físico-químico</th>
+								<td>Explosão de vapor</td>
+								<td>Processo mecânico-químico de base térmica</td>
+								<td>Eco-friendly, de alta eficiência, efetivamente despolimeriza a biomassa</td>
+								<td>Remoção incompleta de lignina, produz poucos produtos químicos e tóxicos</td>
+							</tr>
+							<tr>
+								<td>Oxidação úmida</td>
+								<td>A biomassa é tratada com água usando oxigênio como catalisador</td>
+								<td>Solubiliza hemicelulose e remove eficientemente a lignina</td>
+								<td>Produz baixo rendimento de açúcares, é caro devido aos equipamentos sofisticados e
+									ao catalisador</td>
+							</tr>
+							<tr>
+								<td>Explosão de fibra de amônia</td>
+								<td>A amônia líquida anidra é usada para tratar biomassa</td>
+								<td>Alta eficiência, melhor ação enzimática</td>
+								<td>Pouco econômico e difícil de recuperar em nível de alto nível</td>
+							</tr>
+							<tr>
+								<td>Hidrotermais</td>
+								<td>Utiliza-se água em alta temperatura e pressão</td>
+								<td>Técnica verde, não são usados produtos químicos agressivos</td>
+								<td>Caro devido à alta temperatura, grande consumo de água, produz inibidores de
+									fermentação</td>
+							</tr>
+							<tr>
+								<td>CO₂ permeia através da biomassa</td>
+								<td>CO₂ permeia através da biomassa</td>
+								<td>Não tóxico, não inflamável, não corrosivo</td>
+								<td>Alto custo</td>
+							</tr>
+							<tr>
+								<th scope="rowgroup" rowspan="2">Biológico</th>
+								<td>Enzimático ou microbiano</td>
+								<td>Envolve a capacidade inerente do micróbio de quebrar a biomassa</td>
+								<td>Favorável ao meio ambiente</td>
+								<td>Processo demorado, requer grande espaço, precisa de monitoramento contínuo do
+									crescimento microbiano</td>
+							</tr>
+
+
 						</tbody>
 					</table>
 				</div>
@@ -922,7 +964,7 @@
 						</iframe>
 					</div>
 				</div>
-				<div class="row">
+				<div class="ro pt-5">
 					<p>
 						<em>
 							A seguir, clique em play para conferir o podcast sobre as perspectivas para o
@@ -931,14 +973,23 @@
 						</em>
 					</p>
 				</div>
-				<div class="row py-2">
+				<!-- <div class="row py-2">
 					<i class="bi bi-mic-fill cor1 d-flex justify-content-center" style="font-size:3rem; "></i>
-				</div>
-				<div class="mx-auto">
+				</div> -->
+				<!-- <div class="mx-auto">
 					<audio class="uk-align-center" controls controlslist="nodownload">
-						<source src="https://redirect.sp.senai.br/lk.php?link=28981034696667d92c629b19"
-							type="audio/mp3">
+						<source
+							src="https://play.sesisenai.videolib.live/index.html?token=7ce908cada4b4fd69c80070b32c50d48"
+							type="">
 					</audio>
+				</div> -->
+				<div class="col-lg-8 mx-auto py-3">
+					<div class="ratio ratio-16x9 ">
+						<iframe class="rounded"
+							src="https://play.sesisenai.videolib.live/index.html?token=7ce908cada4b4fd69c80070b32c50d48"
+							title="Podcast 1" allowfullscreen uk-video=" autoplay:false;">
+						</iframe>
+					</div>
 				</div>
 				<div class="mx-auto">
 					<button class="uk-button-default rounded uk-align-center ativo" type="button"
@@ -948,12 +999,82 @@
 					</button>
 					<div id="audio-1" class="uk-card uk-card-default uk-card-body uk-margin-small rounded py-5"
 						hidden="">
-						<p>
-							#
-						</p>
+						<p><strong>Geral:</strong> Bem-vindos ao nosso podcast! Estamos aqui com a profa Bruna Coeli e o
+							prof. Jefferson Oliveira, ambos formados em Química e especialistas em Biocombustíveis.</p>
+
+						<p><strong>Jefferson:</strong> Eu sou o prof. Jefferson e vamos discutir as perspectivas futuras
+							para o desenvolvimento e utilização da biomassa lignocelulósica, um tema de grande
+							relevância para a sustentabilidade e a transição energética. E para essa conversa, tenho
+							aqui comigo a profa Bruna. Seja bem-vinda!</p>
+
+						<p><strong>Bruna:</strong> Obrigada Jefferson! É um prazer estar aqui.</p>
+
+						<p><strong>Jefferson:</strong> E para começar essa conversa, você poderia nos explicar
+							brevemente o que é a biomassa lignocelulósica e por que ela é tão importante?</p>
+
+						<p><strong>Bruna:</strong> Claro! A biomassa lignocelulósica é composta por resíduos agrícolas,
+							florestais e industriais. É o material orgânico mais abundante, menos dispendioso, neutro em
+							carbono e de alta densidade energética do planeta. Essa biomassa é formada principalmente
+							por celulose, hemicelulose e lignina, que podem ser convertidas em vários tipos de
+							biocombustíveis, como etanol celulósico, biodiesel e biogás, além de bioprodutos de valor
+							agregado como compostos fenólicos, açúcares e ácidos orgânicos.</p>
+
+						<p><strong>Jefferson:</strong> Muito interessante! E quais são as principais perspectivas
+							futuras para o uso dessa biomassa?</p>
+
+						<p><strong>Bruna:</strong> As perspectivas são bastante promissoras. Estamos vendo avanços
+							significativos na biotecnologia, que permitem uma conversão mais eficiente da biomassa em
+							biocombustíveis de segunda geração. Estes biocombustíveis apresentam vantagens
+							significativas, como a redução da competição com a produção de alimentos e menor impacto
+							ambiental. Além disso, a biomassa lignocelulósica está sendo explorada para a produção de
+							uma ampla variedade de bioprodutos, incluindo polímeros renováveis e materiais de construção
+							sustentáveis.</p>
+
+						<p><strong>Jefferson:</strong> Parece que a biomassa lignocelulósica tem um potencial enorme!
+							Mas, Bruna, quais são os principais desafios que enfrentamos para o desenvolvimento dessas
+							tecnologias?</p>
+
+						<p><strong>Bruna:</strong> Um dos principais desafios é o pré-tratamento da biomassa, mas os
+							custos elevados são um dos principais obstáculos. A estrutura complexa da lignocelulose
+							dificulta a conversão eficiente em biocombustíveis. Precisamos desenvolver métodos de
+							pré-tratamento mais eficientes e economicamente viáveis. Por exemplo, os pré-tratamentos
+							físicos, químicos e biológicos têm suas vantagens e desvantagens, e a combinação deles pode
+							ser uma solução promissora. Além disso, é necessário um investimento contínuo em pesquisa e
+							infraestrutura para apoiar a escalabilidade dessas tecnologias.</p>
+
+						<p><strong>Jefferson:</strong> Entendi. E como você vê o papel da política e regulamentação
+							nesse cenário?</p>
+
+						<p><strong>Bruna:</strong> As políticas e regulamentações são muito importantes. Precisamos de
+							políticas que incentivem a pesquisa e o desenvolvimento de tecnologias limpas e que promovam
+							o uso sustentável da biomassa lignocelulósica. Isso inclui subsídios para pesquisa,
+							incentivos fiscais para empresas que utilizam biocombustíveis e regulamentações que garantam
+							a sustentabilidade das práticas agrícolas e florestais.</p>
+
+						<p><strong>Jefferson:</strong> Esse papo está muito interessante! Mas, estamos chegando ao
+							final. E para encerrar, diga para nós quais são as suas expectativas para os próximos anos
+							no campo da biomassa lignocelulósica?</p>
+
+						<p><strong>Bruna:</strong> Eu acredito que veremos um aumento significativo na produção de
+							biocombustíveis de segunda geração, com tecnologias mais eficientes e economicamente
+							viáveis. A produção de bioenergia a partir de resíduos agrícolas e florestais também deve
+							crescer, reduzindo a dependência dos combustíveis fósseis.</p>
+
+						<p><strong>Jefferson:</strong> Concordo! Além disso, espero que a biomassa lignocelulósica seja
+							utilizada em uma variedade ainda maior de aplicações, desde bioplásticos até nanomateriais,
+							contribuindo para uma economia mais verde e sustentável.</p>
+
+						<p><strong>Jefferson:</strong> Muito obrigado, Bruna, por compartilhar seus conhecimentos
+							conosco.</p>
+
+						<p><strong>Bruna:</strong> Eu que agradeço!</p>
+
+						<p><strong>Jefferson:</strong> E obrigado a você, ouvinte, por nos acompanhar até aqui. Um
+							abraço e até a próxima!</p>
+
+
 					</div>
 				</div>
-
 
 				<div class="row">
 					<p>
@@ -984,6 +1105,7 @@
 				</div>
 			</article>
 		</section>
+
 		<hr class="uk-divider-icon">
 		<!-- Recapitulando -->
 		<section class="d-flex flex-column justify-content-center" id="recapitulando">
@@ -1005,7 +1127,6 @@
 						Ademais, falamos sobre o uso dos recursos naturais na produção de energias renováveis,
 						especificamente dos
 						biocombustíveis.
-
 					</p>
 				</div>
 			</article>
